# OpenGL-Poker-Game

./: CMakeLists.txt  Poker.ilk  README.md
dependencies/glad/: glad.h
res/shaders/: Basic.shader  Card.shader  text.shader
src/: App.c  App.h  Deck.c  Deck.h  Game.h  GameLoopFunctions.c  GameLoopFunctions.h  GameState.c  GameState.h  HandSolver.c  HandSolver.h  IndexBuffer.c  IndexBuffer.h  Macro.h  MainMenuFunctions.c  MainMenuFunctions.h  Player.c  Player.h  PlayerDataProcessing.c  PlayerDataProcessing.h  Prediction.c  Prediction.h  ProcessUserInputs.c  ProcessUserInputs.h  Renderer.c  Renderer.h  Shader.c  Shader.h  Texture.c  Texture.h  UIColourChange.c  UIColourChange.h  UserInterface.c  UserInterface.h  VertexBuffer.c  VertexBuffer.h  main.c  textTexture.c  textTexture.h
